# yolo-ros

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/my_package/lib/my_package/: inference  yolo  yolo_ros
install/my_package/share/my_package/: package.sh  package.xml
install/zed_components/share/zed_components/: local_setup.sh  package.sh
install/zed_ros2/share/zed_ros2/: package.sh
install/zed_wrapper/share/zed_wrapper/: local_setup.sh  package.sh
log/: latest_build
src/my_package/: package.xml  setup.py
src/my_package/my_package/: image_publisher.py
